force-app/main/default/objects/malive__MALiveDriver__c/malive__MALiveDriver__c.object-meta.xml
<CustomObject>
    <label>MA Live Driver</label>
    <nameField>
        <label>MA Live Driver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MA Live Drivers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>