force-app/main/default/objects/malive__MALiveDriver__c/fields/malive__DriverId__c.field-meta.xml
<CustomField>
    <fullName>malive__DriverId__c</fullName>
    <label>Driver Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>