force-app/main/default/objects/malive__MALiveDriver__c/fields/malive__EmailUsedForTelematicsAlerts__c.field-meta.xml
<CustomField>
    <fullName>malive__EmailUsedForTelematicsAlerts__c</fullName>
    <description>Email used for receiving Telematics Alerts</description>
    <inlineHelpText>Email used for receiving Telematics Alerts</inlineHelpText>
    <label>Email Used for Telematics Alerts</label>
    <type>Email</type>
</CustomField>