force-app/main/default/objects/malive__MALiveDriver__c/fields/malive__HomeCity__c.field-meta.xml
<CustomField>
    <fullName>malive__HomeCity__c</fullName>
    <label>Home City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>