force-app/main/default/objects/malive__MALiveDriver__c/fields/malive__HomeCountry__c.field-meta.xml
<CustomField>
    <fullName>malive__HomeCountry__c</fullName>
    <label>Home Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>