force-app/main/default/objects/malive__MALiveDriver__c/fields/malive__HomeFullAddress__c.field-meta.xml
<CustomField>
    <fullName>malive__HomeFullAddress__c</fullName>
    <label>Home Full Address</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>