force-app/main/default/objects/malive__MALiveDriver__c/fields/malive__HomeStreetAddress__c.field-meta.xml
<CustomField>
    <fullName>malive__HomeStreetAddress__c</fullName>
    <label>Home Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>