force-app/main/default/objects/malive__MALiveDriver__c/fields/malive__LastName__c.field-meta.xml
<CustomField>
    <fullName>malive__LastName__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>