force-app/main/default/objects/malive__MALiveDriver__c/fields/malive__MALiveWorkingHours__c.field-meta.xml
<CustomField>
    <fullName>malive__MALiveWorkingHours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Driver&apos;s specific working hours</description>
    <inlineHelpText>Lookup to the Driver&apos;s specific working hours</inlineHelpText>
    <label>MA Live Working Hours</label>
    <referenceTo>malive__MALiveWorkingHours__c</referenceTo>
    <relationshipLabel>MA Live Drivers</relationshipLabel>
    <relationshipName>MALiveDrivers</relationshipName>
    <type>Lookup</type>
</CustomField>