force-app/main/default/objects/malive__MALiveDriver__c/fields/malive__ReceiveHardAccelAlerts__c.field-meta.xml
<CustomField>
    <fullName>malive__ReceiveHardAccelAlerts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if driver should receive Hard Accel Alerts</description>
    <inlineHelpText>Indicate if driver should receive Hard Accel Alerts</inlineHelpText>
    <label>Receive Hard Accel Alerts?</label>
    <type>Checkbox</type>
</CustomField>