force-app/main/default/objects/malive__MALiveDriver__c/fields/malive__ReceiveHardBrakingAlerts__c.field-meta.xml
<CustomField>
    <fullName>malive__ReceiveHardBrakingAlerts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if driver should receive Hard Braking Alerts</description>
    <inlineHelpText>Indicate if driver should receive Hard Braking Alerts</inlineHelpText>
    <label>Receive Hard Braking Alerts?</label>
    <type>Checkbox</type>
</CustomField>