force-app/main/default/objects/malive__MALiveDriver__c/fields/malive__ReceivePostedSpeedAlerts__c.field-meta.xml
<CustomField>
    <fullName>malive__ReceivePostedSpeedAlerts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if driver should receive Posted Speed Alerts</description>
    <inlineHelpText>Indicate if driver should receive Posted Speed Alerts</inlineHelpText>
    <label>Receive Posted Speed Alerts?</label>
    <type>Checkbox</type>
</CustomField>