force-app/main/default/objects/malive__MALiveDriver__c/fields/malive__User__c.field-meta.xml
<CustomField>
    <fullName>malive__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MALiveDrivers</relationshipName>
    <type>Lookup</type>
</CustomField>